Sat Dec 25 15:58:55 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb, test/csv: should not assume $, invariant.

Sat Dec 25 16:08:06 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c: change rb_atomic_t definition from uchar to uint.

Sat Dec 25 15:04:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/csv/test_encodings.rb (TestEncodings#setup): fix evil test
	  suite writing to the source directory.

Sat Dec 25 15:08:08 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/pty/pty.c (chfunc): Added rb_thread_atfork_before_exec().
	  We must reinitialize GVL at new process creation. Otherwise
	  we may meet an insane deadlock. [Bug#4121][ruby-dev:42686]

Sat Dec 25 14:27:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_extract_encoding_option): accept Encoding object as
	  encoding: optional argument.  [ruby-dev:42884]

Sat Dec 25 13:37:55 2010  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 2.0.2 r6093.

Sat Dec 25 13:05:59 2010  Tanaka Akira  <akr@fsij.org>

	* random.c: parenthesize macro arguments.

Sat Dec 25 12:48:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_f_require_relative): don't omit return type.

Sat Dec 25 11:06:00 2010  Eric Hodel  <drbrain@segment7.net>

	* load.c (rb_f_require_relative): Add documentation.

Sat Dec 25 11:02:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (gzreader_gets): support optional length
	  parameter.

	* ext/zlib/zlib.c (gzfile_read, gzfile_readpartial): length should
	  be long.

Sat Dec 25 10:51:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/generator/generator.{c,h} (fbuffer_free_only_buffer):
	  unused.

	* ext/openssl/ossl_pkcs5.c (ossl_pkcs5_pbkdf2_hmac): add casts.

Fri Dec 24 08:46:04 2010  Tanaka Akira  <akr@fsij.org>

	* process.c: parenthesize macro arguments.

Thu Dec 23 19:17:14 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
